tests/integration/fail/record_contract_empty_record.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
{ a = 1 } | {}
